updated to minecraft 1.19.1; cleanup